Added a different picture

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 <p><a href="https://real-time-stocks.herokuapp.com/">https://real-time-stocks.herokuapp.com/</a></p>
 
-<p><img src="http://i867.photobucket.com/albums/ab236/Veronika_and_Robert/Screenshot%20from%202016-01-26%20155827_zpsfeyqeqge.png" alt="project-pic"></p>
+<p><img src="http://i867.photobucket.com/albums/ab236/Veronika_and_Robert/Screenshot%20from%202016-01-26%20073444_zpskiodrtdl.png" alt="project-pic"></p>
         </section>
 
         <aside id="sidebar">
